--- a/attendance-management-backend/pom.xml
+++ b/attendance-management-backend/pom.xml
@@ -57,6 +57,12 @@
 			<version>6.5.2.Final</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
+
+
 
 	</dependencies>
 
